atualizndo de Banco e conta para livraria
